syntax = "proto3";

option csharp_namespace = "Merchant.Api.Grpc";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service MerchantApiGrpcService {
  rpc CreateMerchant (CreateMerchantMessage) returns (MerchantBaseGrpcResponse);
  rpc UpdateMerchant (UpdateMerchantMessage) returns (MerchantBaseGrpcResponse);
  rpc DeleteMerchant (ByIdMessage) returns (MerchantBaseGrpcResponse);
  rpc GetMerchantById (ByIdMessage) returns (MerchantMessage);
  rpc CreateStore (CreateStoreMessage) returns (MerchantBaseGrpcResponse);
  rpc UpdateStore (UpdateStoreMessage) returns (MerchantBaseGrpcResponse);
  rpc UpdateLocation (UpdateStoreLocationMessage) returns (MerchantBaseGrpcResponse);
  rpc DeleteStore (ByIdMessage) returns (MerchantBaseGrpcResponse);
  rpc GetStoreById (ByIdMessage) returns (StoreMessage);
}

message CreateStoreMessage {
  string merchantId = 1;
  string name = 2;
  string slogan = 3;
  string phoneNumber = 4;
  string email = 5;
  string description = 6;
  StoreLocationMessage location = 7;
}

message UpdateStoreMessage {
  string storeId = 1;
  UpdateStoreItemMessage store = 2;
}

message UpdateStoreLocationMessage {
  string storeId = 1;
  StoreLocationMessage location = 2;
}

message UpdateStoreItemMessage {
  string name = 1;
  string slogan = 2;
  string phoneNumber = 3;
  string email = 4;
  string description = 5;
}

message DeleteStoreResponseMessage {
  bool isSucceed = 1;
}

message StoreLocationMessage {
  IdNameMessage country = 1;
  IdNameMessage city = 2;
  IdNameMessage district = 3;
  IdNameMessage neighborhood = 4;
  IdNameMessage quarter = 5;
  string address = 6;
}

message ByIdMessage {
  string id = 1;
}

message IdNameMessage {
  string id = 1;
  string name = 2;
}

message StoreMessage {
  string id = 1;
  IdNameMessage merchant = 2;
  string name = 3;
  string slogan = 4;
  string phoneNumber = 5;
  string email = 6;
  bool emailConfirmed = 7;
  string description = 8;
  google.protobuf.Timestamp createdDate = 9;
  google.protobuf.Timestamp modifiedDate = 10;
  StoreLocationMessage location = 11;
}


message CreateMerchantMessage {
  string name = 1;
  string slogan = 2;
  string websiteUrl = 3;
  string phoneNumber = 4;
  string taxNumber = 5;
  string email = 6;
  string description = 7;
  IdNameMessage pricingPlan = 8;
}

message UpdateMerchantMessage {
  string merchantId = 1;
  UpdateMerchantItemMessage Merchant = 2;
}

message UpdateMerchantItemMessage {
  string name = 1;
  string slogan = 2;
  string websiteUrl = 3;
  string phoneNumber = 4;
  string taxNumber = 5;
  string email = 6;
  string description = 7;
}

message DeleteMerchantResponseMessage {
  bool isSucceed = 1;
}

message MerchantMessage {
  string id = 1;
  string name = 2;
  string slogan = 3;
  string websiteUrl = 4;
  string phoneNumber = 5;
  string taxNumber = 6;
  string email = 7;
  string description = 8;
  bool emailConfirmed = 9 ;
  google.protobuf.Timestamp createdDate = 10;
  google.protobuf.Timestamp modifiedDate = 11;
}

message MerchantBaseGrpcResponse {
  int32 status = 1;
  string  message = 2;
  google.protobuf.Any data = 3;
}